--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation group: 'org.json', name: 'json', version: '20090211'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+    //크롤링
+    implementation 'org.jsoup:jsoup:1.14.2'
 }
 
 tasks.named('test') {
