--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,15 @@
 # server port 번호 설정
 server:
-  port: 8081
+  port: 8989
 
 # data base 연동 설정
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/db_springboot?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: user_springboot
+    #mariadb는 자신이 사용하고자 하는 스키마를 입력해야지 들어가짐.
+    url: jdbc:mariadb://localhost:3306/sample3
+    username: root
     password: 1234
+    driver-class-name: org.mariadb.jdbc.Driver
 
   # thymeleaf 캐시 설정
   thymeleaf:
